init
	add .core
		encapsulates bll and dal
		add dal entities
			data/entities:
				corebase: basic audit fields and soft delete IsActive field
					TODO: requirements indicate an admin page with users. the createdby and mofidiedby will need to be changed to address this
				client: represents a user to submit a survey form
				survey: the sury users fill out and admins manage
					surey steps: subsections of surveys that contain survey questions.
						survey questions: individual questions
						survey question groups: survey questions designed as a group
							NOTE: the example survey from the email displays a table to the user which inspired this design. Candidate for optimization
						Note: questions and question groups have an order property indicating their render position
						Note: questions and question groups have notes (read only labels) and anser example texts (likely as placeholds when rendered)
						Note: the example survey has several questions that would be better designed as radios/checkboxes/selects
						Note: the requitements do not indicate that questions need to be reused, so to keep things simple each question is tied to a survey and can't be reused without duplicating or reassigning the question
	add .api
		simple api that interacts with .core to retrieve and commit surveys