@@ -1,0 +1,9 @@
+﻿namespace Company.Survey.Admin.Models
+{
+    public class PutSurveyStep
+    {
+        public int Id { get; set; }
+        public int? Order { get; set; }
+        public string Title { get; set; }
+    }
+}
