@@ -1,0 +1,7 @@
+﻿namespace Company.Survey.Admin.Models
+{
+    public class RemoveSurveyStep
+    {
+        public int StepId { get; set; }
+    }
+}
