@@ -10,6 +10,7 @@
 <div class="row">
     Updates are made in real time and applied to all matching client distributed surveys of this version (Clients with this version: @ViewBag.ClientSurveyCount). To create an identical survey that will update separate from currently distributed client surveys, create a new verion.
 </div>
+<input type="hidden" id="surveyId" value="@Model.Id" />
 <br />
 <div class="row">
     <div class="col">
@@ -17,11 +18,11 @@
             Preview Questionnaire
         </button>
         <button class="btn btn-primary"
-                onclick="location.href='@Url.Action("NewVersion", "Questionnaire", new { id = Model.Id, key = Model.SurveyKey })'">
+                onclick="location.href='@Url.Action("NewVersion", "Surveys", new { id = Model.Id, key = Model.SurveyKey })'">
             Create New Version
         </button>
         <button class="btn btn-danger"
-                onclick="location.href='@Url.Action("DisableSurvey", "Questionnaire", new { id = Model.Id })'">
+                onclick="location.href='@Url.Action("DisableSurvey", "Surveys", new { id = Model.Id })'">
             Disable Survey Version
         </button>
     </div>
@@ -41,11 +42,11 @@
         {
             <div class="row bg-secondary text-white pt-2">
                 <div class="col form-group">
-                    <label>Step Position @step.Order</label>
+                    <label>Step Position @(step.Order)</label>
                     <input class="form-control pt-2"
                            id="@step.Id"
                            value="@step.Title"
-                           data-order="@step.Order"
+                           data-order="@(step.Order)"
                            onblur="updateStep()" />
                 </div>
             </div>
@@ -60,7 +61,7 @@
                             Add Content Section
                         </button>
                     }
-                    <button class="btn btn-warning" onclick="removeStepConfirm()">
+                    <button class="btn btn-warning" onclick="removeStepConfirm(@step.Id, () => window.location.reload())">
                         Remove Step
                     </button>
                 </div>
@@ -103,7 +104,7 @@
                             <hr />
                             <div class="row p-2">
                                 <div class="col" id="@question.Id">
-                                    <label>Question Position @(++question.Order)</label>
+                                    <label>Question Position @(question.Order)</label>
                                     <input class="form-control pt-2"
                                            id="@question.Id"
                                            value="@question.Quesiton"
@@ -121,7 +122,7 @@
                         @if (question.ParentSurveyQuestion != null)
                         {
                             <div class="col border" id="@question.Id">
-                                <label>Sub-Position @(++question.Order)</label>
+                                <label>Sub-Position @(question.Order)</label>
                                 <input class="form-control pt-2"
                                        id="@question.Id"
                                        value="@question.Quesiton"
@@ -141,59 +142,6 @@
     </div>
 </div>
 
-@await Html.PartialAsync("_AddStep")
+@await Html.PartialAsync("_AddStep", new PostSurveyStep { SurveyId = Model.Id })
 @await Html.PartialAsync("_AddQuestion")
 @await Html.PartialAsync("_AddContentBlock")
-
-<script>
-    // update listeners
-    function updateStep() {
-        fetch(`${window.location.origin}/questionnaire/UpdateQuestionnaireStep`, {
-            method: 'post',
-            headers: { 'Content-Type': 'application/json' },
-            credentials: "same-origin",
-            body: JSON.stringify({
-                Id: Number(event.target.id),
-                Order: Number(event.target.dataset.order),
-                Title: event.target.value
-            })
-        }).then(e => console.assert(e.ok, "TODO: add success/failure indication"));
-    }
-
-    function updateStepContent() {
-
-    }
-
-    function updateQuestion() {
-
-    }
-
-    function addContentSection() {
-
-    }
-
-    // remove event listeners
-    function removeStepConfirm() {
-        if (confirm("Removing the step will remove all questions in the step. Continue?")) {
-
-        }
-    }
-
-    function removeStepContentConfirm() {
-        if (confirm("Removing the step content will remove all content blocks in the step. Continue?")) {
-
-        }
-    }
-
-    function removeContentBlock() {
-        if (confirm("Are you sure?")) {
-
-        }
-    }
-
-    function removeQuestion() {
-        if (confirm("Are you sure?")) {
-
-        }
-    }
-</script>
