@@ -14,5 +14,3 @@
         </div>
     </div>
 </div>
-<script>
-</script>
